# farm-mote-old

./: .gitignore  CMakeLists.txt  LICENSE  README.md  environment.sh  flash.sh  pinout.txt  sdkconfig  sdkconfig.old  setenv.sh
components/fmcommand/: CMakeLists.txt  command.c  command.h
components/fmconsole/: CMakeLists.txt  command.c  command.h  console.c  console.h  log.c
components/fmframe/: CMakeLists.txt  frame.c  frame.h  framebuf.c  framebuf.h  framecon.c  unittest.c
components/fmkv/: CMakeLists.txt  kv.c  kv.h
components/fmlog/: CMakeLists.txt  log.c  log.h
components/fmrelay/: CMakeLists.txt  relay.c  relay.h
components/fmsensors/: CMakeLists.txt  dht11.c  dht11.h  sensors.c  sensors.h
components/fmstorage/: CMakeLists.txt  filesystem.h  storage.c  storage.h
components/fmswitch/: CMakeLists.txt  switch.c  switch.h
components/frame/: CMakeLists.txt  frame.c  frame.h  framecon.c  framecon.h  framelst.c  framelst.h  unittest.c
main/: CMakeLists.txt  cli.c  cli.h  command.c  command.h  executor.c  main.c  wifi.c  wifi.h
main/command/: command.c  command.h
main/console/: command.c  command.h  console.c  console.h  log.c  log.h
main/error/: error.h
main/event/: event.c  event.h
main/executor/: bytes.c  bytes.h  command.c  command.h  executor.c  executor.h  frame.c  frame.h  network.c  network.h  protocol.c  protocol.h
main/filesystem/: filesystem.c  filesystem.h
main/flash/: flash.c  flash.h
main/id/: id.c  id.h
main/kv/: kv.c  kv.h
main/relay/: relay.h
main/state/: state.h
main/storage/: storage.c  storage.h
main/test/: .#test.c  test.c
main/time/: time.c  time.h
main/wifi/: wifi.c  wifi.c.bak  wifi.h
temp/frame/: frame.h
temp/unittest/: CMakeLists.txt
temp/unittest/src/: main.c
test/: CMakeLists.txt
test/src/: CMakeLists.txt  main.c
